--- a/.github/workflows/workflow-ci.yml
+++ b/.github/workflows/workflow-ci.yml
@@ -26,9 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        poetry-version: ['1.6.1']
+        poetry-version: ['1.6.1', '1.7.1']
         multi: [true, false]
-        python-version: ['3.10-slim', '3.11-slim']
+        python-version: ['3.10-slim', '3.11-slim', '3.12-slim']
 
     steps:
       - uses: actions/checkout@v4
