--- a/.github/workflows/workflow-ci.yml
+++ b/.github/workflows/workflow-ci.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        poetry-version: ['1.6.1', '1.7.1', '1.8.2']
+        poetry-version: ['1.6.1', '1.7.1', '1.8.2', '2.0.0']
         multi: [true, false]
         python-version: ['3.10-slim', '3.11-slim', '3.12-slim']
 
