--- a/.github/workflows/workflow-ci.yml
+++ b/.github/workflows/workflow-ci.yml
@@ -26,9 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        poetry-version: ['2.0.0']
+        poetry-version: ['2.0.0', '2.1.2']
         multi: [true, false]
-        python-version: ['3.10-slim', '3.11-slim', '3.12-slim']
+        python-version: ['3.10-slim', '3.11-slim', '3.12-slim', '3.13-slim']
 
     steps:
       - uses: actions/checkout@v4
